# blood_pressure_tracker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
blood_pressure_project/: asgi.py  settings.py  wsgi.py
templates/: base.html
tracker/: admin.py  forms.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py
tracker/templates/tracker/: create_record.html  last_record.html  statistics.html
